# ONNX_inf

./: .gitignore  CMakeLists.txt  README.md
src/: InferenceONNX.cpp  InferenceONNX.h  InferenceONNX_test.cpp  get_names.cpp  inference.cpp  tokenizer.cpp  tokenizer.h  tokenizer_test.cpp
src/py/: download_model.py  inference.py  inference_exp1.py  names_get.py  test_input_data.py  tokenizer_test.py
